[gd_scene load_steps=10 format=3 uid="uid://de38u2lro1qbg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_buvkj"]
[ext_resource type="Texture2D" uid="uid://bvgbg3dfdrtpe" path="res://assets/textures/player_ship.png" id="2_72q4d"]
[ext_resource type="AudioStream" uid="uid://d21su48h2k8i0" path="res://assets/audio/sfx_laser2.wav" id="3_bm3yt"]

[sub_resource type="Gradient" id="Gradient_55ery"]
offsets = PackedFloat32Array(0, 0.540741, 1)
colors = PackedColorArray(1, 0.933333, 0, 0, 1, 0.427451, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_plg14"]
gradient = SubResource("Gradient_55ery")

[sub_resource type="Curve" id="Curve_4gl4a"]
_data = [Vector2(0, 0.536364), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1csfi"]
curve = SubResource("Curve_4gl4a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o8i85"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 15, 1)
spread = 30.0
initial_velocity_min = -200.0
gravity = Vector3(0, 0, 0)
scale_max = 10.0
scale_curve = SubResource("CurveTexture_1csfi")
color = Color(1, 0.74902, 0, 1)
color_ramp = SubResource("GradientTexture1D_plg14")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7k2wg"]
radius = 17.0
height = 96.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_buvkj")

[node name="FlameParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(-40, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_o8i85")
lifetime = 0.3

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_72q4d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -1)
shape = SubResource("CapsuleShape2D_7k2wg")

[node name="RocketContainer" type="Node" parent="."]

[node name="RocketShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bm3yt")

[node name="LazerContainer" type="Node" parent="."]
